- Modfied Makefile to pass down CCFLAGS

--- a/src/Makefile
+++ b/src/Makefile
@@ -24,7 +24,7 @@ depend:
 	$(MAKE) $(SUBDIRS) TARGET=$@
 
 $(SUBDIRS) : FORCE
-	@cd $@; $(MAKE) $(TARGET) INCLUDE=../$(INCLUDE) OBJ=../$(OBJ)
+	@cd $@; $(MAKE) $(TARGET) INCLUDE=../$(INCLUDE) OBJ=../$(OBJ) CCFLAGS="$(CCFLAGS)"
 
 
 $(EXE): $(OBJ)/*.o
