- added boards 74102 blacksun, 74007 family - quit naked from house now saves implants properly, should stop duping   problem. - Crash_save_implants() added to reduce redundant code in objsave.cc - fixed garbage output in the command "get all." - split structs.h into many parts, such as include/obj_data.h.  These   individual parts should not be included, only "structs.h" - added Makefile in include/ to touch structs.h when needed. - added structs/ dir for src to contain implementation of methods in the   structs/classes defined in the children of structs.h. (such as   obj_data.cc) - added obj_data::getWeight(), setWeight(), modifyWeight(), to replace   GET_OBJ_WEIGHT() macro, which was subsequently undefined. - Tempus has its first private data member!  it is:   obj_data.obj_flags.weight I believe.  You must access it with the   methods mentioned above. - added mobact.h for certain protos and header info. - made densify cumulative if cast on self. - refraction listing on aff page fixed. - econvert now only works on items in inventory, and not on equipped items. - effects of gamma ray increased ( 2x ) for both maxhit and maxmove. - upped damage of oxidize: more dependent on level.

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,9 +4,10 @@ INCLUDE=include
 CCFLAGS=-g -Wall -p
 CXXFLAGS=$(CCFLAGS) -I$(INCLUDE)
 
-SUBDIRS=ban boards bomb clan classes combat db dyntext editor elevators flow_room guns house \
+SUBDIRS=include \
+	ban boards bomb clan classes combat db dyntext editor elevators flow_room guns house \
 	intermud interpreter magic mail matrix misc mobiles net objsave olc paths            \
-	quest search shop smokes social specials util vehicle weather
+	quest search shop smokes social specials util vehicle weather structs
 
 OBJ=ObjFiles
 LIBS=-lcrypt
@@ -24,7 +25,7 @@ depend:
 	$(MAKE) $(SUBDIRS) TARGET=$@
 
 $(SUBDIRS) : FORCE
-	@cd $@; $(MAKE) $(TARGET) INCLUDE=../$(INCLUDE) OBJ=../$(OBJ) CCFLAGS="$(CCFLAGS)"
+	@cd $@; $(MAKE) $(TARGET) INCLUDE=../$(INCLUDE) OBJ=../$(OBJ)
 
 
 $(EXE): $(OBJ)/*.o
