- fixed a problem that was preventing CCFLAGS from propogating down

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,9 @@
-
 CXX=g++
 INCLUDE=include
 CCFLAGS=-g -Wall -p
 CXXFLAGS=$(CCFLAGS) -I$(INCLUDE)
 
-SUBDIRS=include \
+SUBDIRS= \
 	ban boards bomb clan classes combat db dyntext editor elevators flow_room guns house \
 	intermud interpreter magic mail matrix misc mobiles net objsave olc paths            \
 	quest search shop smokes social specials util vehicle weather structs
@@ -14,6 +13,7 @@ LIBS=-lcrypt
 EXE=../bin/circle
 
 default all:
+	$(MAKE) $(INCLUDE) TARGET=$@
 	$(MAKE) $(SUBDIRS) TARGET=$@
 	$(MAKE) $(EXE)
 
@@ -24,8 +24,11 @@ clean:
 depend:
 	$(MAKE) $(SUBDIRS) TARGET=$@
 
+$(INCLUDE) : FORCE
+	@cd $@; $(MAKE) $(TARGET) INCLUDE=../$(INCLUDE) OBJ=../$(OBJ) CCFLAGS="$(CCFLAGS)"
+
 $(SUBDIRS) : FORCE
-	@cd $@; $(MAKE) $(TARGET) INCLUDE=../$(INCLUDE) OBJ=../$(OBJ)
+	@cd $@; $(MAKE) $(TARGET) INCLUDE=../$(INCLUDE) OBJ=../$(OBJ) CCFLAGS="$(CCFLAGS)"
 
 
 $(EXE): $(OBJ)/*.o
