- changed save_zone() to not use the zon/olc dirs for duplicate files. - wait states added to:   open/close  .7/1.5/3 sec for obj/door/heavydoor   lock/unlock 2 sec   pick        3 sec - changed olc mset char_class/remort_char_class to mset class/remort_class - check for existance of other_rm in search doors ( previous crash bug ) - added 'portcullis' to special singular word list - lecture no longer works on shopkeepers - lecture no longer works on fighting chars - put/get obj to/from containers now modifies container weight and   character worn/carried weight properly.

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,6 +8,7 @@ SUBDIRS= \
 	intermud interpreter magic mail matrix misc mobiles net objsave olc paths            \
 	quest search shop smokes social specials util vehicle weather structs
 
+MAKEFLAGS=-s
 OBJ=ObjFiles
 LIBS=-lcrypt
 EXE=../bin/circle
