- converted makearray to c++ - added makefile entry for makearray

--- a/util/src/Makefile
+++ b/util/src/Makefile
@@ -21,3 +21,6 @@ scan_rent: scan_rent.cc
 
 purgeplay: purgeplay.cc
 	$(CXX) purgeplay.cc -o $@
+
+makearray: makearray.cc
+	$(CXX) makearray.cc -o $@
