added "linking" notification

--- a/src/Makefile
+++ b/src/Makefile
@@ -35,6 +35,7 @@ $(SUBDIRS) : FORCE
 
 
 $(EXE): $(OBJ)/*.o
+	@printf "[33m :: linking...[0m\n"
 	$(CXX) $(CCFLAGS) $(OBJ)/*.o $(LIBS) -o $@
 
 FORCE :
