*** empty log message ***

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,7 +8,7 @@ SUBDIRS= \
 	intermud interpreter magic mail matrix misc mobiles net objsave olc paths            \
 	quest search shop smokes social specials util vehicle weather structs
 
-MAKEFLAGS=-s -k 4
+MAKEFLAGS=-s -k 4 -j 4
 OBJ=ObjFiles
 LIBS=-lcrypt
 EXE=../bin/circle
