--- a/src/Makefile
+++ b/src/Makefile
@@ -37,6 +37,6 @@ $(SUBDIRS) : FORCE
 
 $(EXE): $(OBJ)/*.o
 	@printf "[33m :: linking...[0m\n"
-	$(CXX) $(CCFLAGS) $(OBJ)/*.o $(LIBS) -o $@
+	$(CXX) $(CCFLAGS) $(OBJ)/*.o $(LIBS) -o $@ $(LDFLAGS)
 
 FORCE :
