--- a/src/mobiles/Makefile-depend
+++ b/src/mobiles/Makefile-depend
@@ -1,4 +1,4 @@
 $(OBJ)/mobact.o : mobact.cc \
-	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/db.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/spells.h $(INCLUDE)/char_class.h $(INCLUDE)/vehicle.h $(INCLUDE)/flow_room.h $(INCLUDE)/char_class.h $(INCLUDE)/guns.h $(INCLUDE)/bomb.h $(INCLUDE)/mobact.h 
+	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/db.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/spells.h $(INCLUDE)/char_class.h $(INCLUDE)/vehicle.h $(INCLUDE)/flow_room.h $(INCLUDE)/char_class.h $(INCLUDE)/guns.h $(INCLUDE)/bomb.h $(INCLUDE)/mobact.h $(INCLUDE)/fight.h $(INCLUDE)/act.cyborg.h 
 	$(CXX) -c $(CXXFLAGS) mobact.cc            -o $(OBJ)/mobact.o
 OBJFILES= $(OBJ)/mobact.o
