- Added a crude offline utility to view a clan 	- ./clanview option1 option2 		-option 1 { 0 = light 1= normal 2 = full } 		-option 2 { 0 = to_screen 1=to_screen & to_file} 			-writes to file Clanview.out

--- a/util/src/Makefile
+++ b/util/src/Makefile
@@ -1,4 +1,4 @@
-UTILS=hcontrol-view showplay economic_stats demographic_stats scan_rent purgeplay newdyncontrol
+UTILS=hcontrol-view showplay economic_stats demographic_stats scan_rent purgeplay newdyncontrol clanview
 INCLUDE=-I../../src/include
 CXX=g++ -Wall -O3 $(INCLUDE)
 
@@ -27,3 +27,6 @@ makearray: makearray.cc
 
 newdyncontrol: newdyncontrol.cc
 	$(CXX) newdyncontrol.cc -o $@
+
+clanview: clanview.cc
+	$(CXX) clanview.cc -o $@
