--- a/src/editor/Makefile-depend
+++ b/src/editor/Makefile-depend
@@ -1,4 +1,4 @@
 $(OBJ)/editor.o : editor.cc \
-	$(INCLUDE)/desc_data.h $(INCLUDE)/editor.h 
+	$(INCLUDE)/screen.h $(INCLUDE)/desc_data.h $(INCLUDE)/comm.h $(INCLUDE)/db.h $(INCLUDE)/utils.h $(INCLUDE)/login.h $(INCLUDE)/interpreter.h $(INCLUDE)/boards.h $(INCLUDE)/mail.h $(INCLUDE)/editor.h 
 	$(CXX) -c $(CXXFLAGS) editor.cc            -o $(OBJ)/editor.o
 OBJFILES= $(OBJ)/editor.o
