removed inline and optimize from the gcc opts. im not comfortable using optimization while we're this unstable.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 CXX=g++
 INCLUDE=include
-CCFLAGS=-g -Wall -pg -Wcast-qual -finline-functions -Winline -O
+CCFLAGS=-g -Wall -pg -Wcast-qual
 CXXFLAGS=$(CCFLAGS) -I$(INCLUDE)
 
 SUBDIRS= \
