Wow, didn't realize I had modifies so many files.  Most of the mods here should pertain to iscripts.  I believe I fixed some minor bugs as well a couple of months ago.  Also, I added sector type blood per Darth's request.  Also, a good bit a merc stuff is being commited here but it's not finished or usable, and therefore has been either commented out or made unavailable at any level.
I used cvs -z9 commit to commit these files, and it grabbed all the
Makefile-depends by itself.  Is that ok or should I somehow try to
avoid that in the future?

N

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,11 +1,11 @@
 CXX=g++
 INCLUDE=include
-CCFLAGS=-g -Wall -pg -Wcast-qual
+CCFLAGS=-g -Wall -pg -Wcast-qual 
 CXXFLAGS=$(CCFLAGS) -I$(INCLUDE)
 
 SUBDIRS= \
 	ban boards bomb clan classes combat db dyntext editor elevators \
-	flow_room guns help house intermud interpreter magic mail \
+	events flow_room guns help house intermud interpreter iscript magic mail \
 	matrix misc mobiles net objsave olc paths quest search shop \
 	smokes social specials util vehicle weather structs 
 
