Added map functionality at level 72. Don't use it on the production mud yet, though I'm pretty sure it's stable. It's rather nice for very spacial or cartographed zones and works on some others as well.  The algo is rather primitive but I'm working on implementing a newer one from Therion/Babylon.
If ya wanna look at it, it's at the bottom of Mapper.cc

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,7 +7,7 @@ SUBDIRS= \
 	ban boards bomb clan classes combat db dyntext editor elevators \
 	events flow_room guns help house intermud interpreter iscript magic mail \
 	matrix misc mobiles net objsave olc paths quest search shop \
-	smokes social specials util vehicle weather structs 
+	smokes social specials util vehicle weather structs map
 
 MAKEFLAGS=-s -k 4
 OBJ=ObjFiles
