--- a/src/net/Makefile-depend
+++ b/src/net/Makefile-depend
@@ -1,4 +1,7 @@
 $(OBJ)/comm.o : comm.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/spells.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/house.h $(INCLUDE)/screen.h $(INCLUDE)/intermud.h $(INCLUDE)/vehicle.h $(INCLUDE)/help.h $(INCLUDE)/desc_data.h 
 	$(CXX) -c $(CXXFLAGS) comm.cc              -o $(OBJ)/comm.o
-OBJFILES= $(OBJ)/comm.o
+$(OBJ)/nanny.o : nanny.cc \
+	$(INCLUDE)/structs.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/db.h $(INCLUDE)/utils.h $(INCLUDE)/spells.h $(INCLUDE)/handler.h $(INCLUDE)/mail.h $(INCLUDE)/screen.h $(INCLUDE)/help.h $(INCLUDE)/char_class.h $(INCLUDE)/clan.h $(INCLUDE)/vehicle.h $(INCLUDE)/house.h $(INCLUDE)/login.h $(INCLUDE)/matrix.h $(INCLUDE)/bomb.h 
+	$(CXX) -c $(CXXFLAGS) nanny.cc             -o $(OBJ)/nanny.o
+OBJFILES= $(OBJ)/comm.o $(OBJ)/nanny.o
