save_objs checks for the existence of the obj file before reporting an error.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 CXX=g++
 INCLUDE=include
-CCFLAGS=-g -Wall -Wcast-qual -traditional
+CCFLAGS=-g -Wall -Wcast-qual
 CXXFLAGS=$(CCFLAGS) -I$(INCLUDE)
 
 SUBDIRS= \
