--- a/src/interpreter/Makefile-depend
+++ b/src/interpreter/Makefile-depend
@@ -1,4 +1,7 @@
 $(OBJ)/interpreter.o : interpreter.cc \
-	$(INCLUDE)/structs.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/db.h $(INCLUDE)/utils.h $(INCLUDE)/spells.h $(INCLUDE)/handler.h $(INCLUDE)/mail.h $(INCLUDE)/screen.h $(INCLUDE)/help.h $(INCLUDE)/char_class.h $(INCLUDE)/clan.h $(INCLUDE)/vehicle.h $(INCLUDE)/house.h $(INCLUDE)/login.h $(INCLUDE)/matrix.h $(INCLUDE)/bomb.h 
+	$(INCLUDE)/structs.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/db.h $(INCLUDE)/utils.h $(INCLUDE)/spells.h $(INCLUDE)/handler.h $(INCLUDE)/mail.h $(INCLUDE)/screen.h $(INCLUDE)/help.h $(INCLUDE)/char_class.h $(INCLUDE)/clan.h $(INCLUDE)/vehicle.h $(INCLUDE)/house.h $(INCLUDE)/login.h $(INCLUDE)/matrix.h $(INCLUDE)/bomb.h $(INCLUDE)/security.h 
 	$(CXX) -c $(CXXFLAGS) interpreter.cc       -o $(OBJ)/interpreter.o
-OBJFILES= $(OBJ)/interpreter.o
+$(OBJ)/security.o : security.cc \
+	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/db.h $(INCLUDE)/interpreter.h $(INCLUDE)/security.h 
+	$(CXX) -c $(CXXFLAGS) security.cc          -o $(OBJ)/security.o
+OBJFILES= $(OBJ)/interpreter.o $(OBJ)/security.o
