--- a/src/util/Makefile-depend
+++ b/src/util/Makefile-depend
@@ -1,3 +1,6 @@
+$(OBJ)/deleak.o : deleak.cc \
+
+	$(CXX) -c $(CXXFLAGS) deleak.cc            -o $(OBJ)/deleak.o
 $(OBJ)/graph.o : graph.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/spells.h $(INCLUDE)/vehicle.h $(INCLUDE)/fight.h $(INCLUDE)/char_class.h 
 	$(CXX) -c $(CXXFLAGS) graph.cc             -o $(OBJ)/graph.o
@@ -13,4 +16,4 @@ $(OBJ)/random.o : random.cc \
 $(OBJ)/utils.o : utils.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/screen.h $(INCLUDE)/spells.h $(INCLUDE)/handler.h $(INCLUDE)/db.h 
 	$(CXX) -c $(CXXFLAGS) utils.cc             -o $(OBJ)/utils.o
-OBJFILES= $(OBJ)/graph.o $(OBJ)/handler.o $(OBJ)/modify.o $(OBJ)/random.o $(OBJ)/utils.o
+OBJFILES= $(OBJ)/deleak.o $(OBJ)/graph.o $(OBJ)/handler.o $(OBJ)/modify.o $(OBJ)/random.o $(OBJ)/utils.o
