Access security pretty much done. Lists load on boot.
Check it out folks.  The only thing left to do is integrate calls to
Security::isMember(player, group) into the codebase in place of level
checks.  ( Or in some cases allowing either membership or level. )

--- a/src/map/Makefile-depend
+++ b/src/map/Makefile-depend
@@ -1,4 +1,4 @@
 $(OBJ)/Mapper.o : Mapper.cc \
-	$(INCLUDE)/Mapper.h 
+	$(INCLUDE)/Mapper.h $(INCLUDE)/tokenizer.h 
 	$(CXX) -c $(CXXFLAGS) Mapper.cc            -o $(OBJ)/Mapper.o
 OBJFILES= $(OBJ)/Mapper.o
