--- a/src/interpreter/Makefile-depend
+++ b/src/interpreter/Makefile-depend
@@ -1,5 +1,5 @@
 $(OBJ)/group.o : group.cc \
-	$(INCLUDE)/xml_utils.h $(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/db.h $(INCLUDE)/interpreter.h $(INCLUDE)/comm.h $(INCLUDE)/security.h $(INCLUDE)/tokenizer.h 
+	$(INCLUDE)/xml_utils.h $(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/db.h $(INCLUDE)/interpreter.h $(INCLUDE)/comm.h $(INCLUDE)/security.h $(INCLUDE)/tokenizer.h $(INCLUDE)/screen.h 
 	$(CXX) -c $(CXXFLAGS) group.cc             -o $(OBJ)/group.o
 $(OBJ)/interpreter.o : interpreter.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/db.h $(INCLUDE)/utils.h $(INCLUDE)/spells.h $(INCLUDE)/handler.h $(INCLUDE)/mail.h $(INCLUDE)/screen.h $(INCLUDE)/help.h $(INCLUDE)/char_class.h $(INCLUDE)/clan.h $(INCLUDE)/vehicle.h $(INCLUDE)/house.h $(INCLUDE)/login.h $(INCLUDE)/matrix.h $(INCLUDE)/bomb.h $(INCLUDE)/security.h 
