--- a/src/misc/Makefile-depend
+++ b/src/misc/Makefile-depend
@@ -19,9 +19,6 @@ $(OBJ)/act.wizard.o : act.wizard.cc \
 $(OBJ)/config.o : config.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/spells.h $(INCLUDE)/char_class.h 
 	$(CXX) -c $(CXXFLAGS) config.cc            -o $(OBJ)/config.o
-$(OBJ)/constants.o : constants.cc \
-	$(INCLUDE)/structs.h $(INCLUDE)/spells.h 
-	$(CXX) -c $(CXXFLAGS) constants.cc         -o $(OBJ)/constants.o
 $(OBJ)/limits.o : limits.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/spells.h $(INCLUDE)/comm.h $(INCLUDE)/db.h $(INCLUDE)/handler.h $(INCLUDE)/vehicle.h $(INCLUDE)/clan.h $(INCLUDE)/specs.h $(INCLUDE)/fight.h 
 	$(CXX) -c $(CXXFLAGS) limits.cc            -o $(OBJ)/limits.o
@@ -31,4 +28,4 @@ $(OBJ)/login.o : login.cc \
 $(OBJ)/rpl_resp.o : rpl_resp.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/screen.h $(INCLUDE)/rpl_resp.h 
 	$(CXX) -c $(CXXFLAGS) rpl_resp.cc          -o $(OBJ)/rpl_resp.o
-OBJFILES= $(OBJ)/act.comm.o $(OBJ)/act.informative.o $(OBJ)/act.movement.o $(OBJ)/act.obj.o $(OBJ)/act.other.o $(OBJ)/act.wizard.o $(OBJ)/config.o $(OBJ)/constants.o $(OBJ)/limits.o $(OBJ)/login.o $(OBJ)/rpl_resp.o
+OBJFILES= $(OBJ)/act.comm.o $(OBJ)/act.informative.o $(OBJ)/act.movement.o $(OBJ)/act.obj.o $(OBJ)/act.other.o $(OBJ)/act.wizard.o $(OBJ)/config.o $(OBJ)/limits.o $(OBJ)/login.o $(OBJ)/rpl_resp.o
